# ued-ng

./: .bzrignore  CMakeLists.txt  main.cxx
src/: CMakeLists.txt
src/Core/: Additional.hxx  CMakeLists.txt  Calendar.cxx  Calendar.hxx  Category.cxx  Category.hxx  DayOfTheWeek.cxx  DayOfTheWeek.hxx  Group.cxx  Group.hxx  GroupManager.cxx  GroupManager.hxx  HoursOfTheDay.cxx  HoursOfTheDay.hxx  MarkCategory.cxx  MarkCategory.hxx  MarkPart.cxx  MarkPart.hxx  Points.cxx  Points.hxx  Present.hxx  Report.cxx  Report.hxx  ReportManager.cxx  ReportManager.hxx  Revoke.hxx  Schedule.cxx  Schedule.hxx  ScheduleSource.cxx  ScheduleSource.hxx  ScheduleSourceManager.cxx  ScheduleSourceManager.hxx  Subject.cxx  Subject.hxx  SubjectSource.cxx  SubjectSource.hxx  Teacher.cxx  Teacher.hxx  TeacherManager.cxx  TeacherManager.hxx
src/Python/: CMakeLists.txt
src/TextUI/: CMakeLists.txt  HandleManager.cxx  HandleManager.hxx  Schedule.cxx  Schedule.hxx  ScheduleSource.cxx  ScheduleSource.hxx  ScheduleSourceManager.cxx  ScheduleSourceManager.hxx  SubjectSource.cxx  SubjectSource.hxx  Teacher.cxx  Teacher.hxx  TeacherManager.cxx  TeacherManager.hxx
src/core/: Additional.hxx  CMakeLists.txt  Calendar.cxx  Calendar.hxx  Category.cxx  Category.hxx  DayOfTheWeek.cxx  DayOfTheWeek.hxx  Group.cxx  Group.hxx  HoursOfTheDay.cxx  HoursOfTheDay.hxx  MarkCategory.cxx  MarkCategory.hxx  MarkPart.cxx  MarkPart.hxx  Points.cxx  Points.hxx  Present.hxx  Report.cxx  Report.hxx  ReportManager.cxx  ReportManager.hxx  Revoke.hxx  Schedule.cxx  Schedule.hxx  ScheduleSource.cxx  (+9 more)
test/: CMakeLists.txt
(+7 files in other folders)
